feat : working add and indentify routes
